--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ psutil==2.1.3
 bitcoin==1.1.15
 pycountry==1.9
 pyelliptic==1.5.5
-pysqlcipher==2.6.3-1
+pysqlcipher==2.6.4
 pystun==0.1.0
 python-gnupg==0.3.6
 python-obelisk==0.1.3
